--- a/docs/reference.qmd
+++ b/docs/reference.qmd
@@ -5,5 +5,17 @@ title: "References"
 List of resources and references used in my Cyber Security / Ethical Hacking learning and used on this blog.
 
 - Cyber Security Bootcamp. Zero To Mastery Inc., 2023. _Udemy_
+- [OSINT Tools. Security Trails. July 14, 2023.](https://securitytrails.com/blog/osint-tools)
 
+
+
+
+--- 
+## YouTube 
+
+List of YouTube videos (not in any order), `topic -- channel`.
+
+
+- [theHarvester -- System Exploited](https://youtu.be/cDryilcK39c)
+- [Sherlock -- NetworkChuck](https://youtu.be/KdZvxxLsN3E)
 
